--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "engines": {
+    "node": "v10.15.0"
+  },
   "scripts": {
     "start": "node server.js",
     "server": "node server.js",
